Fix tag cloud header spacing

--- a/style.css
+++ b/style.css
@@ -272,6 +272,7 @@ h3.header {
     background-color: #ffffff;
     padding: 15px;
     text-align: center;
+    margin-bottom: 20px;
 }
 
 .widget-easy-twitter-feed-widget-global-wrapper {
@@ -292,7 +293,7 @@ footer {
 
 footer .textwidget {
     text-align: left;
-    padding: 0;
+    padding: 10px;
 }
 
 .icons-large ul {
